--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   kommunicate_flutter: ^1.5.0
+  permission_handler: ^10.2.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
